--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -9,11 +9,14 @@
     <!-- ======= Styles ====== -->
     <link rel="stylesheet" href="/css/dashboard.css">
     <link rel="stylesheet" href="/css/navbar.css" />
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+
 </head>
 
 <body>
   <header>
-    <a href="#" class="logo">EDUCATION</a>
+    <a href="index.html" class="logo">EDUCATION</a>
     <nav class="navbar">
       <div class="btn">
         <i class="fas fa-times close-btn"></i>
@@ -28,9 +31,7 @@
       <i class="fas fa-bars menu-btn"></i>
     </div>
 </header>
-  <section>
-    <h2>Responsive Navbar</h2>
-  </section>
+  
 
 <script src="script.js"></script>
     <!-- =============== Navigation ================ -->
@@ -336,6 +337,8 @@
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    
 </body>
 
 </html>
